added consistancy check service
